--- a/Views/Pages/Tickets/EditTicketPage.cshtml
+++ b/Views/Pages/Tickets/EditTicketPage.cshtml
@@ -15,7 +15,6 @@
         Response.Redirect("../NoPermission");
     }
 }
-}
 <div class="container-fluid w-80 mx-auto" style="height: 100%">
     <div class="card shadow-lg border-0 mx-auto" style="max-width: 600px; border-radius: 15px;">
         <div class="card-body p-5">
@@ -24,37 +23,37 @@
 
                 <div class="form-group">
                     <img id="previewImage"
-                         src="~/images/@Model.Ticket.Image" 
+                         src="~/images/@Model.Ticket.Image"
                          alt="Uploaded Image" class="card-img-top mb-2" style="height: 25rem; object-fit: cover;" />
                 </div>
 
                 <div class="form-group">
-                    <label asp-for="Image" class="col-sm-2 col-form-label control-label text-dark font-weight-bold">Image</label>
+                    <label asp-for="Image" class="col-sm-2 col-form-label control-label text-dark font-weight-bold">Image<span class="text-danger">*</span></label>
                     <div class="col-sm-10">
                         <div class="custom-file">
-                            <input asp-for="Image" class="custom-file-input form-control" type="file" required="false"/>
+                            <input asp-for="Image" class="custom-file-input form-control" type="file" />
                         </div>
                     </div>
                 </div>
 
                 <div class="form-group">
                     <label asp-for="Ticket.Title" class="control-label text-dark font-weight-bold"
-                        style="margin-top: 10px">Title<span class="text-danger">*</span></label>
+                           style="margin-top: 10px">Title<span class="text-danger">*</span></label>
                     <input asp-for="Ticket.Title" class="form-control shadow-sm border-0" style="font-size: 1.6rem;"
-                        placeholder="Enter Title" />
+                           placeholder="Enter Title" required />
                     <span asp-validation-for="Ticket.Title" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="Ticket.Description" class="control-label text-dark font-weight-bold"
-                        style="margin-top: 10px">Description</label>
+                           style="margin-top: 10px">Description</label>
                     <textarea asp-for="Ticket.Description" class="form-control shadow-sm border-0"
-                        style="font-size: 1.6rem;" rows="4" placeholder="Enter Description"></textarea>
+                              style="font-size: 1.6rem;" rows="4" placeholder="Enter Description"></textarea>
                     <span asp-validation-for="Ticket.Description" class="text-danger"></span>
                 </div>
 
                 <div class="form-group">
                     <label asp-for="Ticket.TypeId" class="control-label text-dark font-weight-bold"
-                        style="margin-top: 10px">Type<span class="text-danger">*</span></label>
+                           style="margin-top: 10px">Type<span class="text-danger">*</span></label>
                     <select asp-for="Ticket.TypeId" class="form-control shadow-sm border-0" asp-items="@(ViewData["TypeId"] as SelectList)">
                         <option selected>Select Ticket Type</option>
                     </select>
@@ -63,32 +62,36 @@
 
                 <div class="form-group">
                     <label asp-for="Ticket.ExpiryDate" class="control-label text-dark font-weight-bold"
-                        style="margin-top: 10px">Expiry Date<span class="text-danger">*</span></label>
+                           style="margin-top: 10px">Expiry Date<span class="text-danger">*</span></label>
                     <input asp-for="Ticket.ExpiryDate" type="date" style="font-size: 1.6rem;"
-                        class="form-control shadow-sm border-0" />
+                           class="form-control shadow-sm border-0" required min="@DateTime.Now.ToString("yyyy-MM-dd")" />
                     <span asp-validation-for="Ticket.ExpiryDate" class="text-danger"></span>
                 </div>
+
                 <div class="form-group">
                     <label asp-for="Ticket.Price" class="control-label text-dark font-weight-bold"
-                        style="margin-top: 10px">Price<span class="text-danger">*</span></label>
+                           style="margin-top: 10px">Price<span class="text-danger">*</span></label>
                     <input asp-for="Ticket.Price" type="number" style="font-size: 1.6rem;" step="0.01"
-                        class="form-control shadow-sm border-0" placeholder="Enter Price" />
+                           class="form-control shadow-sm border-0" placeholder="Enter Price" min="5000" max="100000000" required />
                     <span asp-validation-for="Ticket.Price" class="text-danger"></span>
                 </div>
+
                 <div class="form-group">
                     <label asp-for="Ticket.Quantity" class="control-label text-dark font-weight-bold"
-                        style="margin-top: 10px">Quantity<span class="text-danger">*</span></label>
+                           style="margin-top: 10px">Quantity<span class="text-danger">*</span></label>
                     <input asp-for="Ticket.Quantity" type="number" class="form-control shadow-sm border-0"
-                        style="font-size: 1.6rem;" placeholder="Enter Quantity" />
+                           style="font-size: 1.6rem;" placeholder="Enter Quantity" min="1" required />
                     <span asp-validation-for="Ticket.Quantity" class="text-danger"></span>
                 </div>
+
                 <div class="form-group text-center">
                     <input type="submit" value="Save" class="btn btn-dark font-weight-bold btn-lg shadow-sm w-100"
-                        style="margin-top: 10px; font-size: 1.6rem;" />
+                           style="margin-top: 10px; font-size: 1.6rem;" />
                 </div>
+
                 <div class="form-group text-center">
                     <a href="/MyTickets" class="btn btn-dark font-weight-bold btn-lg shadow-sm w-100"
-                        style="margin-top: 10px; font-size: 1.6rem;">Back</a>
+                       style="margin-top: 10px; font-size: 1.6rem;">Back</a>
                 </div>
             </form>
         </div>
