--- a/Views/Pages/MyOrdersPage.cshtml
+++ b/Views/Pages/MyOrdersPage.cshtml
@@ -60,7 +60,7 @@
                                 @Html.DisplayFor(modelItem => item.Quantity)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.ChatBox.Status)
+                                @Html.DisplayFor(modelItem => item.ChatBox.Status.Status)
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.CreateAt)
