--- a/Views/Pages/Tickets/TicketDetailsPage.cshtml
+++ b/Views/Pages/Tickets/TicketDetailsPage.cshtml
@@ -40,7 +40,7 @@
             @{
                 if(Model.Ticket.OwnerId != userId)
                 {
-                    <form class="w-100 mt-3">
+                    <form class="w-100 mt-3" method="post">
                         <button type="submit" class="btn btn-outline-dark w-100" style="font-size: 1.6rem;">Contact Seller</button>
                     </form>
                 }
